tests/compile-fail/null_pointer_deref.stderr
error: Undefined Behavior: null pointer is not a valid pointer for this operation
  --> $DIR/null_pointer_deref.rs:3:27
   |
LL |     let x: i32 = unsafe { *std::ptr::null() }; //~ ERROR null pointer is not a valid pointer for this operation
   |                           ^^^^^^^^^^^^^^^^^ null pointer is not a valid pointer for this operation
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `main` at $DIR/null_pointer_deref.rs:3:27

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

